# sigil-web

./: .gitignore  LICENSE  README.md  gunicorn.conf.py  install.sh  pyproject.toml  requirements.txt  run.py  wsgi.py
docs/: README.md  SETUP.md  THREAT_MODEL.md
native/: Makefile  se050_scp03.h  se050_vcom.c
sigil/: __init__.py
sigil/bitcoin/: __init__.py  addresses.py  amount.py  config.py  local_node.py  network.py  transaction.py
sigil/cli/: __init__.py  commands.py  main.py
sigil/client/: cli.py  client.py
sigil/crypto/: __init__.py  bip32.py  bip39.py  ecc.py  encoding.py  hashing.py  signatures.py
sigil/gui/: api_client.py  desktop.py
sigil/hardware/: __init__.py  constants.py  errors.py  interface.py  locking.py  scp03.py  session.py
sigil/network/: __init__.py  electrum.py
sigil/privacy/: __init__.py  analyzer.py  canary.py  tumbler.py  verify.py
sigil/server/: app.py  auth.py
sigil/wallet/: __init__.py  core.py  qr.py  slots.py
sigil/web/: __init__.py  helpers.py  security.py  session_mgmt.py
sigil/web/blueprints/: auth.py  dashboard.py  gui_api.py  honeypot.py  logs.py  privacy_bp.py  pubkeys.py  qr.py  settings.py  signing.py  tumbler_bp.py  wallet_mgmt.py
sigil/web/templates/: base.html  canary.html  canary_verify.html  create_wallet.html  dashboard.html  export_pubkey.html  history.html  import_wallet.html  login.html  logs.html  privacy_analyzer.html  pubkeys.html  receive.html  rotate_keys.html  send.html  send_confirm.html  settings.html  sign_message.html  tumbler.html  verify.html  wipe.html
tools/: scp03_keygen.py
(+2 files in other folders)
